--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
-    "aos": "^3.0.0-beta.6",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.3.0",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.11",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
